RESOLVED FIXED161206
Regression(r203623): Breaks App Store application
https://bugs.webkit.org/show_bug.cgi?id=161206
Summary Regression(r203623): Breaks App Store application
Chris Dumez
Reported 2016-08-25 13:07:11 PDT
r203623 breaks Apple Store App: TypeError: Argument 1 ('element') to Window.getComputedStyle must be an instance of Element
Attachments
Patch (7.46 KB, patch)
2016-08-25 14:01 PDT, Chris Dumez
no flags
Patch (7.46 KB, patch)
2016-08-25 14:12 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-25 13:07:39 PDT
Chris Dumez
Comment 2 2016-08-25 13:09:24 PDT
Chris Dumez
Comment 3 2016-08-25 14:01:05 PDT
Chris Dumez
Comment 4 2016-08-25 14:12:12 PDT
Chris Dumez
Comment 5 2016-08-25 14:50:19 PDT
Comment on attachment 287014 [details] Patch Clearing flags on attachment: 287014 Committed r204986: <http://trac.webkit.org/changeset/204986>
Chris Dumez
Comment 6 2016-08-25 14:50:26 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 7 2016-08-25 17:05:46 PDT
Hm, GTK is not set up to handle function overloading here: In file included from DerivedSources/webkitdom/WebKitDOMDOMWindow.cpp:53:0: DerivedSources/webkitdom/WebKitDOMDOMWindowUnstable.h:254:139: error: conflicting declaration of C function ‘WebKitDOMCSSStyleDeclaration* webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow*, WebKitDOMDocument*, const gchar*, GError**)’ webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow* self, WebKitDOMDocument* document, const gchar* pseudoElement, GError** error); ^ In file included from DerivedSources/webkitdom/WebKitDOMDOMWindow.cpp:53:0: DerivedSources/webkitdom/WebKitDOMDOMWindowUnstable.h:240:1: note: previous declaration ‘WebKitDOMCSSStyleDeclaration* webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow*, WebKitDOMElement*, const gchar*)’ webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow* self, WebKitDOMElement* element, const gchar* pseudoElement); ^ ninja: build stopped: subcommand failed. Carlos, perhaps we can add some custom rule to rename it to _with_error...?
Chris Dumez
Comment 8 2016-08-25 18:30:59 PDT
(In reply to comment #7) > Hm, GTK is not set up to handle function overloading here: > > In file included from DerivedSources/webkitdom/WebKitDOMDOMWindow.cpp:53:0: > DerivedSources/webkitdom/WebKitDOMDOMWindowUnstable.h:254:139: error: > conflicting declaration of C function ‘WebKitDOMCSSStyleDeclaration* > webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow*, > WebKitDOMDocument*, const gchar*, GError**)’ > webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow* self, > WebKitDOMDocument* document, const gchar* pseudoElement, GError** error); > > ^ > In file included from DerivedSources/webkitdom/WebKitDOMDOMWindow.cpp:53:0: > DerivedSources/webkitdom/WebKitDOMDOMWindowUnstable.h:240:1: note: previous > declaration ‘WebKitDOMCSSStyleDeclaration* > webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow*, > WebKitDOMElement*, const gchar*)’ > webkit_dom_dom_window_get_computed_style(WebKitDOMDOMWindow* self, > WebKitDOMElement* element, const gchar* pseudoElement); > ^ > ninja: build stopped: subcommand failed. > > Carlos, perhaps we can add some custom rule to rename it to _with_error...? Sorry about that, you can ifdef out the overload as it has no use for gtk.
Note You need to log in before you can comment on or make changes to this bug.