Regression(r203623): Breaks App Store application https://bugs.webkit.org/show_bug.cgi?id=161206 <rdar://problem/28015060>

Reviewed by Ryosuke Niwa.

Source/WebCore:

Add quirks for the App Store application so that we log an error message
when passing a Document node to Window.getComputedStyle() instead of
throwing an exception.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::getComputedStyle):
* page/DOMWindow.h:
* page/DOMWindow.idl:
* platform/RuntimeApplicationChecks.h:
* platform/RuntimeApplicationChecks.mm:
(WebCore::MacApplication::isAppStore):

LayoutTests:

Rebaseline existing test as the exception message is slightly different.

* fast/dom/Window/getComputedStyle-missing-parameter-expected.txt:
* fast/dom/Window/getComputedStyle-missing-parameter.html:

Canonical link: https://commits.webkit.org/179366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204986 268f45cc-cd09-0410-ab3c-d52691b4dbfc