Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -51,6 +51,7 @@ WEBCORE_EXPORT bool isSafari();
 bool isSolidStateNetworksDownloader();
 WEBCORE_EXPORT bool isVersions();
 WEBCORE_EXPORT bool isHRBlock();
+WEBCORE_EXPORT bool isAppStore();
 
 } // MacApplication
 
